syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hatokuse.grpc";
option java_outer_classname = "HaToKuSeProto";

package hatokuse;

// Aile üyeleri arası mesajlaşma servisi
service FamilyService {
  // Lider, üyelere mesaj gönderir
  rpc StoreMessage(StoreMessageRequest) returns (StoreMessageResponse);
  
  // Lider, üyeden mesaj alır
  rpc RetrieveMessage(RetrieveMessageRequest) returns (RetrieveMessageResponse);
  
  // Üye kayıt servisi
  rpc RegisterMember(RegisterRequest) returns (RegisterResponse);
  
  // Heartbeat - üyenin canlı olup olmadığını kontrol eder
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  
  // Üye istatistiklerini al
  rpc GetMemberStats(StatsRequest) returns (StatsResponse);
}

message StoreMessageRequest {
  int32 message_id = 1;
  string message_content = 2;
  int32 member_id = 3;
}

message StoreMessageResponse {
  bool success = 1;
  string error_message = 2;
  int32 member_id = 3;
}

message RetrieveMessageRequest {
  int32 message_id = 1;
}

message RetrieveMessageResponse {
  bool success = 1;
  string message_content = 2;
  string error_message = 3;
}

message RegisterRequest {
  int32 member_id = 1;
  string host = 2;
  int32 port = 3;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  int32 tolerance_level = 3;
}

message HeartbeatRequest {
  int32 member_id = 1;
}

message HeartbeatResponse {
  bool alive = 1;
}

message StatsRequest {
  int32 member_id = 1;
}

message StatsResponse {
  int32 member_id = 1;
  int32 message_count = 2;
}
